First attempt at prompting users for invocations with UI components